fix rc-collapse to work with our accordion

--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -1,4 +1,3 @@
-$image-path:  '~uswds/src/img';
 //Local variables
 @import '_variables.scss';
 //USWDS
